--- a/survey-fe/src/app/app.component.html
+++ b/survey-fe/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<md-toolbar color="primary">
+    <span>Survey</span>
+    <span class="example-spacer"></span>
+</md-toolbar>
+
 <router-outlet></router-outlet>
