new survey page

--- a/survey-fe/src/app/survey-overview/survey-overview.component.html
+++ b/survey-fe/src/app/survey-overview/survey-overview.component.html
@@ -1,6 +1,7 @@
 <div class="flex-container" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutAlign.xs="start">
   <div class="flex-item" fxFlex="20%" fxFlex.xs="40%"> </div>
   <div class="flex-item" fxFlex>
+    <a routerLink="/new" routerLinkActive="active">New survey</a>
     <table>
       <tr>
         <th>#</th>
