--- a/survey-fe/src/app/survey-new/survey-new.component.html
+++ b/survey-fe/src/app/survey-new/survey-new.component.html
@@ -2,6 +2,13 @@
   <div class="flex-item" fxFlex="20%" fxFlex.xs="40%"> </div>
   <div class="flex-item" fxFlex>
     <a routerLink="/" routerLinkActive="active"><-</a>  
+    <form novalidate [formGroup]="newSurveyForGroup" (ngSubmit)="onSubmit(newSurveyForGroup)">
+      <input type="text" formControlName="id"/>
+      {{ newSurveyForGroup.controls.id?.errors | json }}
+      <input type="text" formControlName="name"/>
+      {{ newSurveyForGroup.controls.name?.errors | json }}
+      <button type="submit" [disabled]="newSurveyForGroup.invalid">Add</button>
+    </form>
   </div>
   <div class="flex-item" fxFlex="20%"> </div>
 </div>
